[gd_scene load_steps=10 format=2]

[ext_resource path="res://Wall.png" type="Texture" id=1]
[ext_resource path="res://Floor.png" type="Texture" id=2]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://MainMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
flags_world_triplanar = true
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_world_triplanar = true
albedo_texture = ExtResource( 2 )
uv1_triplanar = true

[node name="Spatial" type="Spatial"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.19
anchor_right = 0.5
anchor_bottom = 0.19
margin_left = -315.0
margin_top = -32.0
margin_right = 315.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Squares of Doom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -24.5
margin_right = 62.0
margin_bottom = 24.5
custom_fonts/font = SubResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.651
anchor_right = 0.5
anchor_bottom = 0.651
margin_left = -160.0
margin_top = -24.2832
margin_right = 160.0
margin_bottom = 24.7168
custom_fonts/font = SubResource( 2 )
text = "Leaderboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlay" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.344
anchor_top = 0.731
anchor_right = 0.656
anchor_bottom = 0.812
margin_left = -0.256012
margin_top = -0.239685
margin_right = 0.255981
margin_bottom = 0.160309
custom_fonts/font = SubResource( 2 )
text = "How to Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CSGCombiner" type="CSGCombiner" parent="."]
use_collision = true

[node name="CSGBox" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -19 )
width = 92.0
height = 3.0
depth = 74.0
material = SubResource( 3 )

[node name="CSGBox2" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.666847, -7 )
operation = 2
width = 36.0
depth = 38.0
material = SubResource( 4 )

[node name="Camera" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="CanvasLayer/Control/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Leaderboard" to="." method="_on_Leaderboard_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HowToPlay" to="." method="_on_HowToPlay_pressed"]
